2.0.2
	+ Bug fix: drift can be recalculated now
2.0.1
	+ Bug fix: _restartAllServices method now works properly
1.5.2
	+ Zentyal rebrand
1.5.1
	+ Preconfigure the three NTP servers.
1.3.13
	+ Bug fix: keep menu folders open during page reloads
1.1
	+ Bugfix: timezone wasn't set or import properly
0.12.99
	+ New release
0.12
	+ New release
0.11.101
	+ New release
0.11.100
	+ Fix issue with upstart script
	+ Do not restart services after changing time zone
	+ Stop ntp service in pre-start upstart script
	+ onInstall() functionality moved to migration script
0.11.99
	+ New release
0.10.99
	+ New release
0.10
	+ New release
0.9.100
	+ Use services module
0.9.99
	+ New release
0.9.3
	+ New release
0.9.2
	+ New release
0.9.1
	+ New release
0.9
	+ Added Polish translation
	+ New release
0.8.99
	+ New release
0.8.1
	+ New release
0.8
	+ New release
0.7.99  
	+ Add a brazilian portuguese translation
	+ Fix bugs giving a more robust support for adding NTP servers

0.6
	+ Move to client
	+ API documented using naturaldocs
	+ Update install
	+ Update debian scripts
	+ Fix ebox-timezone-import
	+ Use of ebox-sudoers-friendly

0.5.2
	+ Fix some packaging issues

0.5.1
	+ Convert module to new menu system

0.5
	+ Initial release