@@ -1,3 +1,5 @@
+HEAD
+	+ More robust default values for external servers
 2.0.2
 	+ Bug fix: drift can be recalculated now
 2.0.1
